...

  ///Metode ini digunakan untuk melakukan logout pengguna dari aplikasi.
  Future<void> _logout() async {
    await FirebaseAuth.instance.signOut();
    Navigator.pushAndRemoveUntil(
      context,
      MaterialPageRoute(builder: (context) => const Login()),
      (route) => false,
    );
  }

  ///Metode ini dijalankan ketika widget pertama kali dibuat. Ini digunakan untuk menginisialisasi beberapa variabel dan objek seperti notifyHelper, serta untuk mengambil data obat dan rumah sakit dari controller masing-masing.
  @override
...
          });
        },
      ),
    );
  }

  ///Metode ini digunakan untuk membangun bagian baris tambahan yang mencakup tanggal hari ini dan tombol "+Add". Tombol ini memunculkan dialog untuk menambahkan obat, rumah sakit, atau untuk logout.
  _addBar() {
    return Container(
      margin: const EdgeInsets.only(left: 20, right: 20, top: 10),
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: [
...
                            leading: const Icon(Icons.medication),
                          ),
                          ListTile(
                            onTap: () {
                              _logout();
                            },
                            title: const Text("Logout"),
                            leading: const Icon(Icons.logout),
                          ),
                        ],
                      ),
                    );
                  });
...
